# symbolic-piano-continuation

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  dataset.py  docker_train.sh  get_data.sh  pyproject.toml  quantize_all.py  run_baseline.sh  tokenize_all.py
outdir/: sample_01.json  sample_02.json  sample_03.json  sample_04.json
outmidi/: sample_01.mid  sample_02.mid  sample_03.mid  sample_04.mid
rwkv/: main.py  pyproject.toml  requirements.txt
rwkv/src/rwkv/: model.py
sym-music-gen/: README.md  data.sha  pyproject.toml  requirements.txt  spc_train.sh
sym-music-gen/configs/: train_config.json
sym-music-gen/src/: mirex_dataset.py  rwkv_utils.py  spc_get_data.sh  spc_prep.py  train.py  trainer.py
