[project]
name = "symbolic-piano-continuation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "miditok>=3.0.6.post1",
    "numpy>=2.3.3",
    "pathlib>=1.0.1",
    "symusic>=0.5.8",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
