[project]
name = "rwkv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "lightning==2.5.2",
    "ninja==1.11.1.4",
    "torch==2.5.1",
]

[[tool.uv.index]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "torch-cu121" }]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"
